--- a/src/design/templates/login/login.component.html
+++ b/src/design/templates/login/login.component.html
@@ -1,20 +1,20 @@
 <div class="login" #loginMainCard>
   <app-page-container>
-    <ng-container *ngIf="state === 'LOGIN'; else passwordResetView">
+    @if (state === 'LOGIN') {
       <h1>Sign In</h1>
-      <ng-container *ngIf="loginState">
+      @if (loginState) {
         <div class="login__subtitle-warning">{{loginMessages[loginState]}}</div>
-      </ng-container>
+      }
       <form
         class="login__form"
-        (submit)="onLogin()" 
-      >
-        <formly-form 
-          [model]="model" 
-          [fields]="fields" 
+        (submit)="onLogin()"
+        >
+        <formly-form
+          [model]="model"
+          [fields]="fields"
           [form]="form"
         ></formly-form>
-        <a class="login__reset-link" (click)="setState('PASSWORD_RESET')"> 
+        <a class="login__reset-link" (click)="setState('PASSWORD_RESET')">
           Forgot your password?
         </a>
         <app-button
@@ -24,39 +24,37 @@
           [isSubmitButton]="true"
         ></app-button>
       </form>
-    </ng-container>
+    } @else {
+      <h1> Password Reset </h1>
+      <p> Forgot your account's password? Enter your account name and we'll send you a randomized new password to your email address.</p>
+      <div class="login__subtitle-warning">
+        {{resetErrorMessage}}
+      </div>
+      <form
+        class="login__form"
+        (submit)="onPasswordReset()"
+        >
+        <formly-form
+          [model]="recoveryModel"
+          [fields]="recoveryFields"
+          [form]="recoveryForm"
+        ></formly-form>
+        <div class="login__button">
+          <app-button
+            class="login__button-left"
+            [type]="'DARK'"
+            [text]="'Cancel'"
+            (click)="setState('LOGIN')"
+          ></app-button>
+          <app-button
+            [type]="'PRIMARY'"
+            [text]="'Reset Password'"
+            [disabled]="isWaitingForPasswordReset"
+            [isSubmitButton]="true"
+          ></app-button>
+        </div>
+      </form>
+    }
   </app-page-container>
 </div>
 
-<ng-template #passwordResetView>
-  <h1> Password Reset </h1>
-  <p> Forgot your account's password? Enter your account name and we'll send you a randomized new password to your email address.</p>
-  <div class="login__subtitle-warning">
-    {{resetErrorMessage}}
-  </div>
-  
-  <form 
-    class="login__form" 
-    (submit)="onPasswordReset()"
-  >
-      <formly-form 
-        [model]="recoveryModel" 
-        [fields]="recoveryFields" 
-        [form]="recoveryForm"
-      ></formly-form>
-      <div class="login__button">
-        <app-button
-          class="login__button-left"
-          [type]="'DARK'"
-          [text]="'Cancel'"
-          (click)="setState('LOGIN')"
-        ></app-button>
-        <app-button
-          [type]="'PRIMARY'"
-          [text]="'Reset Password'"
-          [disabled]="isWaitingForPasswordReset"
-          [isSubmitButton]="true"
-        ></app-button>
-      </div>
-  </form>
-</ng-template>
