Get rid of warning

--- a/src/design/templates/general-overview/general-overview.component.html
+++ b/src/design/templates/general-overview/general-overview.component.html
@@ -110,9 +110,7 @@
             <app-image-card
               class="player-card__card"
               [serverUrl]="serverUrl"
-              [imageUrl]="
-                playerCharacter.images[0] ?? '/' + defaultPlayerCharacterImage
-              "
+              [imageUrl]="toImageUrl(playerCharacter)"
               [alt]="
                 'An image displaying the player character ' +
                 playerCharacter.name
