Add autocomplete add quote fiel and much more

--- a/src/app/campaign/pages/character-page/character-page.component.html
+++ b/src/app/campaign/pages/character-page/character-page.component.html
@@ -10,6 +10,7 @@
     [characterServerModel]="store.characterServerModel()"
     [characterQuote]="characterQuote"
     [campaignCharacters]="campaignCharacters() ?? []"
+    [campaignNPCCharacters]="campaignNPCCharacters() ?? []"
     [campaignOrganizations]="campaignOrganizations() ?? []"
     [campaignLocations]="campaignLocations() ?? []"
     [serverUrl]="serverUrl"
