--- a/src/design/templates/character/character.component.html
+++ b/src/design/templates/character/character.component.html
@@ -137,7 +137,7 @@
       <app-encounter-accordion
         [encounters]="character().encounters ?? []"
         [campaignLocations]="campaignLocations()"
-        [campaignCharacters]="campaignCharacters()"
+        [campaignCharacters]="campaignNPCCharacters()"
         [serverModel]="encounterServerModel()"
         [canUpdate]="canUpdate()"
         [canCreate]="canCreate()"
