--- a/src/design/atoms/badge/badge.component.scss
+++ b/src/design/atoms/badge/badge.component.scss
@@ -1,3 +1,7 @@
+:host {
+  border-radius: var(--bs-border-radius);
+}
+
 .badge-button {
   border-radius: var(--bs-border-radius);
   display: flex;
@@ -11,6 +15,11 @@
       color: inherit;
     }
   }
+}
+
+.badge {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .bg-warning,
