--- a/src/design/organisms/quote/quote.component.scss
+++ b/src/design/organisms/quote/quote.component.scss
@@ -2,12 +2,13 @@
   margin-bottom: var(--spacer-3);
 
   &__controls {
+    display: flex;
+    flex-direction: row;
+    gap: var(--spacer-4);
     margin-top: var(--spacer-3);
   }
 
   &__control {
-    margin-left: var(--spacer-3);
-    margin-right: var(--spacer-3);
     display: inline-block;
     width: fit-content;
   }
