--- a/src/design/organisms/sessionaudio-card/sessionaudio-card.component.scss
+++ b/src/design/organisms/sessionaudio-card/sessionaudio-card.component.scss
@@ -1,20 +1,18 @@
-@import '/src/screens.scss';
+@import "/src/screens.scss";
 
-.card{
-  margin: var(--spacer-3);
-  
-  &-title{
+.card {
+  &-title {
     text-align: center;
     margin-bottom: var(--spacer-0);
   }
-  
-  &-body{
+
+  &-body {
     display: flex;
     justify-content: center;
     flex-direction: column;
   }
-  
-  &-link{
+
+  &-link {
     text-align: center;
     margin-bottom: var(--spacer-2);
     margin-left: var(--spacer-0) !important;
